Add menu image etc

--- a/index.html
+++ b/index.html
@@ -9,14 +9,31 @@
     <header>
         <nav class="flex-enabled">
             <a href="index.html"><img class="indent" src="images/pixarlogo.png" alt="Pixar logo"></a>
-            <ul class="pixar flex-enabled flex-right">
-                <li><a href="https://www.pixar.com/feature-films-launch">Feature Films</a></li>
-                <li><a href="https://www.pixar.com/short-films-1">Short Films</a></li>
-                <li><a href="https://www.pixar.com/technology">Technology</a></li>
-                <li><a href="https://www.pixar.com/careers">Careers</a></li>
-                <li><a href="https://www.pixar.com/extras">Extras</a></li>
-                <li><a href="https://www.pixar.com/about">About</a></li>
-            </ul>
+            <div class="desktop-menu-container flex-enabled flex-right">
+                    <ul class="pixar flex-enabled flex-right">
+                        <li><a href="https://www.pixar.com/feature-films-launch">Feature Films</a></li>
+                        <li><a href="https://www.pixar.com/short-films-1">Short Films</a></li>
+                        <li><a href="https://www.pixar.com/technology">Technology</a></li>
+                        <li><a href="https://www.pixar.com/careers">Careers</a></li>
+                        <li><a href="https://www.pixar.com/extras">Extras</a></li>
+                        <li><a href="https://www.pixar.com/about">About</a></li>
+                    </ul>
+             </div>  
+
+             <div class="mobile-menu-container flex-enabled flex-right">
+                <button class="mobile-menu-button"><img id="mobile-menu-image" src="images/menu-open.png"></button>
+                <div id="mobile-menu" class="mobile-menu-content">
+                    <ul class="pixar flex-enabled flex-right">
+                        <li><a href="https://www.pixar.com/feature-films-launch">Feature Films</a></li>
+                        <li><a href="https://www.pixar.com/short-films-1">Short Films</a></li>
+                        <li><a href="https://www.pixar.com/technology">Technology</a></li>
+                        <li><a href="https://www.pixar.com/careers">Careers</a></li>
+                        <li><a href="https://www.pixar.com/extras">Extras</a></li>
+                        <li><a href="https://www.pixar.com/about">About</a></li>
+                    </ul>
+                </div>
+                
+         </div>  
         </nav>
     </header>
     <section class="flex-enabled flex-center">
